--- a/upgrade-server.yml
+++ b/upgrade-server.yml
@@ -1,6 +1,8 @@
 ---
 
 - hosts: nextcloud-server
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
   tasks:
     - name: Update all packages to the newest version
       apt:
